# TextPredictionInC

./: CMakeLists.txt  README.md  WordTree.hpp
HW5/: WordTree.cpp  main.cpp
